# ira-rs

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md  requirements.txt
artifact/: README.md  zenodo-metadata.md
artifact/scripts/: generate_numbers.py  process_access_concentration.py  process_bytes_per_cache_entry.py  process_ephemeral_keys.py  process_evaluation.py  process_intra_block_frequency.py  process_io_trace.py  process_op_distribution.py  process_source_annotations.py
crates/block-size/: Cargo.toml
crates/block-size/src/: main.rs
crates/io-trace/: Cargo.toml
crates/io-trace/src/: main.rs  timed_db.rs
crates/ira-common/: Cargo.toml
crates/ira-common/src/: executor.rs  hint_format.rs  lib.rs  state_hash.rs  types.rs
crates/reth-backup/: Cargo.toml
crates/reth-backup/src/: hinted_db.rs  main.rs
crates/reth-baseline/: Cargo.toml
crates/reth-baseline/src/: cached_state_db.rs  cross_block_cache.rs  main.rs
crates/reth-primary/: Cargo.toml
crates/reth-primary/src/: collector.rs  main.rs  source_tracking_db.rs
data/: 2026.01.08.measure-bytes-per-cache-entry.csv  2026.01.09.measure-all-keys-as-hint-cache-size.csv  2026.01.09.measure-hint-size.csv  2026.01.09.measure-working-set-size.csv  2026.01.14.block-size.csv  2026.01.15.peak-rss.txt  2026.01.15.reth-baseline-analysis-run.csv  2026.01.15.reth-primary-analysis-run.csv  2026.01.16.peak-rss.txt  2026.01.16.reth-backup-parallel16-analysis-run.csv  2026.01.16.reth-backup-parallel64-analysis-run.csv  2026.01.16.reth-backup-sequential-analysis-run.csv  2026.01.20.consecutive-block-overlap.csv  2026.01.20.global-key-access-frequency.csv  2026.01.20.intra-block-access-frequency.csv  2026.01.20.key-lifespan-distribution.csv  2026.01.20.per-block-unique-keys.csv  2026.01.27.io-trace.csv  2026.01.28.reth-backup-parallel12-analysis-run.csv  2026.01.28.reth-backup-parallel2-analysis-run.csv  2026.01.28.reth-backup-parallel24-analysis-run.csv  2026.01.28.reth-backup-parallel32-analysis-run.csv  2026.01.28.reth-backup-parallel4-analysis-run.csv  2026.01.28.reth-backup-parallel48-analysis-run.csv  2026.01.28.reth-backup-parallel8-analysis-run.csv  2026.01.28.source-byte-distribution.csv  2026.01.29.reth-baseline-run2-analysis-run.csv  2026.02.01.reth-primary-run2-analysis-run.csv  2026.02.02.reth-backup-parallel12-run2-analysis-run.csv  2026.02.02.reth-backup-parallel16-run2-analysis-run.csv  2026.02.02.reth-backup-parallel2-run2-analysis-run.csv  2026.02.02.reth-backup-parallel24-run2-analysis-run.csv  2026.02.02.reth-backup-parallel32-run2-analysis-run.csv  2026.02.02.reth-backup-parallel4-run2-analysis-run.csv  2026.02.02.reth-backup-parallel48-run2-analysis-run.csv  2026.02.02.reth-backup-parallel64-run2-analysis-run.csv  2026.02.02.reth-backup-parallel8-run2-analysis-run.csv  2026.02.02.reth-backup-sequential-run2-analysis-run.csv  2026.02.12.reth-baseline-run3-analysis-run.csv  2026.02.13.reth-backup-parallel12-run3-analysis-run.csv  (+11 more)
docs/: architecture.md
scripts/: analyze-access-concentration.py  analyze-bounded-working-set.py  analyze-ephemeral-dominance.py  analyze-intra-block-locality.py  analyze-ira-l.py  analyze-storage-domination.py  analyze-summary.py  benchmark-all.sh  benchmark-cold-cache.sh  generate-consecutive-block-overlap.py  generate-contract-access-concentration.py  generate-evaluation-numbers.py  generate-global-key-access-frequency.py  generate-intra-block-access-frequency.py  generate-io-trace-plot.py  generate-key-lifespan-distribution.py  generate-per-block-op-distribution.py  generate-per-block-unique-keys.py  generate-source-byte-distribution.py  graph-bytes-per-cache-entry.py  graph-hint-compression-decompression-time.py  graph-working-set-size.py  measure-all-keys-as-hint-cache-size.py  measure-bytes-per-cache-entry.py  measure-hint-size.py  measure-working-set-size.py  plot-cdf.py  plot-execution-times.py  plot-ira-l-speedup.py  plot-percentile-bands.py
src/: executor.rs  inspector.rs  main.rs  parquet.rs  types.rs
