[package]
name = "reth-primary"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "reth-primary"
path = "src/main.rs"

[dependencies]
ira-common = { path = "../ira-common" }

# Reth dependencies
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374", features = ["node", "evm"] }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "62abfdaeb54e8a205a8ee085ddebd56047d93374" }

# Alloy dependencies
alloy-evm = "0.25"
alloy-primitives = "1"
alloy-consensus = "1"

# CLI and utilities
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
chrono = "0.4"
memory-stats = "1.2.0"
